# benchmark-envoy

./: .gitignore  Cargo.toml  Dockerfile  Istio local benchmarks.csv  Makefile  cluster.yaml  docker-compose.yaml
envoy-configs/: direct.yaml  simple.yaml
kubernetes-configs/: client.yaml  server-tls.yaml  server.yaml
src/: main.rs
