[package]
name = "benchmark-envoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
hdrhistogram = "7.5.4"
http = "1.1.0"
http-body-util = "0.1.2"
humantime = "2.1.0"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
